fix: removal of unneccesary gap property in thumbnail-container

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@
     aspect-ratio: 2;
     margin-left: -100px;
     /* border: 1px solid rgb(255, 255, 255); */
-    gap:10px;
 }
 
 .image-thumbnail{
